--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-<h1>Odin Recipes!</h1>
-<a href="recipes/Lasagna.html">Lasagna Recipe</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <h1>Odin Recipes:</h1>
+</head>
+<body>
+    <p>Hello everyone! This website will be a recipe book for some easy and short dishes. 
+        Simply just click on any link you would like to see the recipe for and get cooking! Good Luck!</p>
+        <ol>
+            <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="recipes/burger.html">Burger</a></li>
+            <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
+            <li><a href="recipes/chickenburrito.html">Chicken Burrito</a></li>
+        </ol>    
+</body>
+</html>
