--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,13 @@
-<h1>Lasagna Recipe!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lasagna Recipe</title>
+</head>
+<body>
+    <h1>How to: Lasagna</h1>
+    <img src="../images/Lasagna.jpeg" />
+</body>
+</html>
