The chicken burrito page has been fully updated to include ingreadients, and a step by step process on how to make the dish.

--- a/recipes/chickenburrito.html
+++ b/recipes/chickenburrito.html
@@ -9,5 +9,34 @@
 <body>
     <h1>How to: Chicken Burrito</h1>
     <img src="../images/chicken.jpeg" />
+
+    <h3>Here is a simple chicken burrito recipe. It is very simple to make, and takes very little to no time.</h3>
+    <p>These low calorie burrito's pack a punch of flavor and are great for meal prep. </p>
+
+    <h4>Ingredients:</h4>
+    <ul>
+        <li>Chicken Breast</li>
+        <li>Chili Powder</li>
+        <li>Ground Cumin</li>
+        <li>Salt</li>
+        <li>Ground Pepper</li>
+        <li>Olive Oil</li>
+        <li>Spanish Rice</li>
+        <li>Black Beans</li>
+        <li>Cheddar Cheese</li>
+        <li>Flour Tortillas</li>
+    </ul>
+
+    <h4>Cooking Steps:</h4>
+    <ol>
+        <li>Season the chicken with chili, cumin, salt and pepper.</li>
+        <li>In a large skillet over medium heat add olive oil and chicken. Cook the chicken until tender, around 7 minutes.</li>
+        <li>Remove from the pan and place on a cutting board to rest for about 5 minutes. Then slice into strips. In the meantime, cook your Spanish Rice according to package directions - or make this delicious homemade Spanish Rice. Allow to cool.</li>
+        <li>Using a fine-mesh sieve, drain and rinse black beans until rinse water runs clear. Set aside and allow to drip until mostly dry.</li>
+        <li>Assemble your burritos. Place 3 tablespoons of Spanish rice and 4-5 slices of chicken, 2 tablespoons black beans, and about 2 tablespoons shredded cheese to each tortilla.</li>
+        <li>Pull in each end of the tortilla and roll up tightly into a burrito shape.</li>
+        <li>Enjoy!</li>
+    </ol>
+
 </body>
 </html>
