Finished up the spaghetti recipe and added ingredients, description, and cooking steps.

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,5 +9,31 @@
 <body>
     <h1>How to: Spaghetti</h1>
     <img src="../images/Spaghetti.jpeg" />
+
+    <h3>Here is a simple Spaghetti recipe. It is very simple to make, and takes very little to no time.</h3>
+    <p>This low calorie Spaghetti packs a punch of flavor and are great for meal prep. </p>
+
+    <h4>Ingredients:</h4>
+    <ul>
+        <li>Spaghetti Pasta</li>
+        <li>Tomato Sauce</li>
+        <li>Parmesan Cheese</li>
+        <li>Virgin Olive Oil</li>
+        <li>Fresh Garlic</li>
+        <li>Oregan</li>
+        <li>Salt</li>
+        <li>Pepper</li>
+    </ul>
+
+    <h4>Cooking Steps:</h4>
+    <ol>
+        <li>Cook spaghetti: Fill a large Dutch oven or pot with cold water 3/4 full and bring to a boil. Add 2 tsp salt and spaghetti.</li>
+        <li>Ensure pasta does not stick together: Separate pasta with tongs a few times during the first 2 minutes of cooking to ensure it does not stick. Keep cooking uncovered for 5 more minutes or until al dente, stirring occasionally.</li>
+        <li>Drain pasta: Test the spaghetti for doneness towards the end by grabbing one strand onto a plate with tongs. Do not overcook until too soft. The key to tasty pasta is cooked pasta with a bite. Drain in a colander.</li>
+        <li>Cook garlic: Return the pot to medium heat and add the olive oil, 4 garlic cloves, and oregano. Cook for 20 seconds, stirring constantly. Garlic cooks fast and can easily burn, so don’t walk away. Turn off the heat.</li>
+        <li>Add remaining ingredients: Drained pasta, tomato sauce, remaining 1/2 tsp salt, ground black pepper, and 1 more fresh garlic clove. Stir gently until warmed through. That 1 clove of fresh garlic at the end is a must!</li>
+        <li>Sprinkle with Parmesan…and serve this spaghetti with tomato sauce immediately!</li>
+        <li>Enjoy!</li>
+    </ol>
 </body>
 </html>
