--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -9,5 +9,29 @@
 <body>
     <h1>How to: Burger</h1>
     <img src="../images/Burger.jpeg" />
+
+    <h3>Here is a simple Burger recipe. It is very simple to make, and takes very little to no time.</h3>
+    <p>This low calorie Burger packs a punch of flavor and are great for meal prep. </p>
+
+    <h4>Ingredients:</h4>
+    <ul>
+        <li>Egg</li>
+        <li>Salt</li>
+        <li>Black Pepper</li>
+        <li>Ground Beef</li>
+        <li>Dry Bread Crumbs</li>
+        <li>Any other toppings you would like!</li>
+    </ul>
+
+    <h4>Cooking Steps:</h4>
+    <ol>
+        <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
+        <li>Whisk together egg, salt, and pepper in a medium bowl.</li>
+        <li>Add ground beef and bread crumbs and mix with your hands or a fork until well blended.</li>
+        <li>Form into four 3/4-inch-thick patties.</li>
+        <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
+        <li>Serve hot and add on any additional toppings that you wish.</li>
+        <li>Enjoy!</li>
+    </ol>
 </body>
 </html>
