Added return to main page buttons to all recipe pages.

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -35,5 +35,8 @@
         <li>Sprinkle with Parmesan…and serve this spaghetti with tomato sauce immediately!</li>
         <li>Enjoy!</li>
     </ol>
+
+    <p></p>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
