--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -33,5 +33,8 @@
         <li>Serve hot and add on any additional toppings that you wish.</li>
         <li>Enjoy!</li>
     </ol>
+
+    <p></p>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
